# vsomeip

./: .bazelrc  .clang-format  .cmake-format.py  .cproject  .git-blame-ignore-revs  .gitignore  .project  .tests-whitelist  AUTHORS  Android.bp  Android.mk  BUILD  CHANGES  CMakeCache.txt  CMakeDoxygenDefaults.cmake  CMakeLists.txt  CMakePresets.json  CMakePresets.json.rej  CONTRIBUTING.md  CTestTestfile.cmake  Dockerfile  Doxyfile  LICENSE_boost  Makefile  README  README.md  Vagrantfile  WORKSPACE  boost.BUILD  cmake_install.cmake  exportmap  exportmap.gcc  initial.txt  libvsomeip.yaml  src  stash.patch  vSomeIPConfig.cmake.in  vsomeip.pc.in  vsomeip3.pc  vsomeip3.pc.in  (+4 more)
c_examples/hello_world/: CMakeLists.txt
config/: CMakeLists.txt  vsomeip-client.xml  vsomeip-local-security.json  vsomeip-local-tcp-client.json  vsomeip-local-tcp-service.json  vsomeip-local-tracing.json  vsomeip-local.json  vsomeip-magic-cookies-client.json  vsomeip-magic-cookies-client.xml  vsomeip-magic-cookies-service.json  vsomeip-magic-cookies-service.xml  vsomeip-sample.xml  vsomeip-service.xml  vsomeip-tcp-client-security.json  vsomeip-tcp-client.json  vsomeip-tcp-client.xml  vsomeip-tcp-service-security.json  vsomeip-tcp-service.json  vsomeip-tcp-service.xml  vsomeip-test.json  vsomeip-test.xml  vsomeip-udp-client-security.json  vsomeip-udp-client.json  vsomeip-udp-client.xml  vsomeip-udp-second-client.xml  vsomeip-udp-service-security.json  vsomeip-udp-service.json  vsomeip-udp-service.xml  vsomeip.json  vsomeip.xml
daemon/: CMakeLists.txt  vsomeipd.cpp
documentation/: CMakeLists.txt  README.md  doxygen.in  multicast.txt  network-tests.md  readme.txt  todo.txt  vsomeipConfiguration.md  vsomeipProtocol  vsomeipProtocol.md  vsomeipUserGuide  vsomeipUserGuide.md
examples/: CMakeLists.txt  Makefile  client-sample.cpp  cmake_install.cmake  notify-sample.cpp  readme.md  readme.txt  request-sample.cpp  response-sample.cpp  sample-ids.hpp  service-sample.cpp  subscribe-sample.cpp  vsomeipd.cpp
examples/hello_world/: Android.bp  BUILD  CMakeCache.txt  CMakeLists.txt  Makefile  hello_world_client.cpp  hello_world_client.hpp  hello_world_client_main.cpp  hello_world_service.cpp  hello_world_service.hpp  hello_world_service_main.cpp  helloworld-local.json  readme  readme-android  readme.md  readme_android
examples/routingmanagerd/: CMakeLists.txt  Makefile  routingmanagerd.cpp
examples/wait-until-available/: CMakeLists.txt  wait-until-available.cpp
implementation/configuration/: CMakeLists.txt
implementation/service_discovery/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/mgu/: CMakeLists.txt
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  configuration-test.cpp  magic-cookies-test-client.cpp  magic_cookies_test_client_start.sh  magic_cookies_test_service_start.sh  magic_cookies_test_starter.sh  readme.txt  someip_test_globals.hpp  tsan-suppressions.txt
test/any_instance_tests/: any_instance_test_client.cpp  any_instance_test_client_availability_checker.cpp  any_instance_test_globals.hpp  any_instance_test_master_starter.sh  any_instance_test_service.cpp  any_instance_test_slave_starter.sh
test/application_tests/: application_test.cpp  application_test.json  application_test_availability.cpp  application_test_client.cpp  application_test_client_availability.cpp  application_test_daemon.cpp  application_test_daemon.json  application_test_globals.hpp  application_test_no_dispatch_threads.json  application_test_no_dispatch_threads_daemon.json  application_test_service.cpp  application_test_single_process.cpp  application_test_single_process_starter.sh  application_test_starter.sh
test/bat_tests/: excluded_tests.txt  sdk_vsomeip_tests.py  vsomeip_socket_path_tests.py  vsomeip_system_tests.py
test/benchmark_tests/: CMakeLists.txt  main.cpp
test/big_payload_tests/: big_payload_test_client.cpp  big_payload_test_client.hpp  big_payload_test_client_local_start.sh  big_payload_test_client_start.sh  big_payload_test_external_starter.sh  big_payload_test_globals.hpp  big_payload_test_local.json  big_payload_test_local_limited.json  big_payload_test_local_queue_limited.json  big_payload_test_local_random.json  big_payload_test_local_starter.sh  big_payload_test_service.cpp  big_payload_test_service.hpp  big_payload_test_service_external_start.sh  big_payload_test_service_local_start.sh  big_payload_test_udp_client.json  big_payload_test_udp_service.json
test/client_id_tests/: client_id_test_globals.hpp  client_id_test_master_starter.sh  client_id_test_service.cpp  client_id_test_slave_starter.sh  client_id_test_utility.cpp  client_id_test_utility.json  client_id_test_utility_discontinuous_masked_511.json  client_id_test_utility_masked_127.json  client_id_test_utility_masked_4095.json  client_id_test_utility_masked_511.json
test/common/: CMakeLists.txt  README.md  utility.cpp  utility.hpp
test/configuration_tests/: configuration-test-deprecated.json  configuration-test.cpp  configuration-test.json
test/cpu_load_tests/: cpu_load_measurer.cpp  cpu_load_measurer.hpp  cpu_load_test_client.cpp  cpu_load_test_globals.hpp  cpu_load_test_master_starter.sh  cpu_load_test_service.cpp  cpu_load_test_slave_starter.sh
test/debounce_tests/: debounce_test_client.json  debounce_test_service.json
test/debug_diag_job_plugin_tests/: debug_diag_job_plugin_test_client.cpp  debug_diag_job_plugin_test_globals.hpp  debug_diag_job_plugin_test_master_starter.sh  debug_diag_job_plugin_test_service.cpp  debug_diag_job_plugin_test_slave_starter.sh
test/e2e_tests/: e2e_profile_04_test_client.cpp  e2e_profile_04_test_external_master_start.sh  e2e_profile_04_test_external_slave_start.sh  e2e_profile_04_test_service.cpp  e2e_profile_04_test_service.hpp  e2e_test_client.cpp  e2e_test_external_master_start.sh  e2e_test_external_slave_start.sh  e2e_test_service.cpp
test/event_tests/: event_test_client.cpp  event_test_master_starter.sh  event_test_service.cpp  (+1 more)
vsomeip/: .cproject  .gitignore  .project  CMakeLists.txt  application-sample.conf  samples.conf  vSomeIPConfig.cmake.in  vsomeip.conf  vsomeipd.conf
(+2781 files in other folders)
